Fix scrollbar appearance and menu item onclick behavior

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -7,7 +7,7 @@
     @apply font-newsreader;
   }
 
-  ::-webkit-scrollbar {
+  body::-webkit-scrollbar {
     @apply hidden;
   }
 
